<resources>
    <string name="app_name">DetikCom</string>
    <string name="var_contdesc">contdesc</string>
    <string name="menu_terbaru">Terbaru</string>
    <string name="menu_mostpopular">#MostPopular</string>
    <string name="menu_antarkansemangat">#AntarkanSemangat</string>
    <string name="menu_beritautama">Berita Utama</string>
    <string name="home">Home</string>
    <string name="layanan">Layanan</string>
    <string name="kategori">Kategori</string>
    <string name="video">Video</string>
    <string name="judul_headline">Judul Headline</string>
    <string name="deskripsi_headline">deskripsi headline</string>
    <string name="loremsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Why do we use it? It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using Content here, content here, making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for lorem ipsum will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like). Where does it come from? Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</string>
    <string name="posttime">Sabtu, 23 Mei 2020 17:30 WIB</string>
    <string name="reporter">Yudistira Saputra - detikNews</string>
    <string name="bacajuga">Baca juga : Judul Berita Terkait</string>
    <string name="judul_berita">Judul Berita</string>
    <string name="detiknews">detikNews</string>
    <string name="fotodesc">Foto : Dok. detiknews</string>
    <string name="detailNews">Ratusan buruh di Kota Bekasi mulai berkumpul sejak pagi. Mereka berencana menggelar aksi demonstrasi menolak Undang-Undang Omnibus Law Cipta Kerja, di depan Kantor Wali Kota Bekasi, Kamis (8/10). Salah satu peserta aksi, Dimas mengatakan pihaknya akan menggelar aksi demonstrasi di depan Kantor Wali Kota Bekasi. Mereka tidak ikut aksi yang digelar di Istana Negara, Jakarta. Saat buruh tengah berorasi, rombongan pelajar STM menaiki sebuah truk melintas di Jalan Sultan Agung. Mereka diduga bakal menuju depan Istana Merdeka untuk ikut aksi menolak UU Cipta Kerja. Kaum pekerja menyambut para pelajar dengan tepuk tangan. Salah seorang buruh lantas memberikan air minum kemasan kepada rombongan anak STM tersebut.</string>
</resources>
